--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,15 @@
 <body>
     <div>
         <div id="queue">
-
+            <div class="task critical" id="1">
+                Задача3
+            </div>
+            <div class="task usual" id="2">
+                Задача2
+            </div>
+            <div class="task important" id="3">
+                Задача1
+            </div>
         </div>
         <div id="description">
 
