--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,13 +8,13 @@
 <body>
     <div>
         <div id="queue">
-            <div class="task critical" id="1">
+            <div class="task critical inwork" id="1">
                 Задача3
             </div>
-            <div class="task usual" id="2">
+            <div class="task usual inwork" id="2">
                 Задача2
             </div>
-            <div class="task important" id="3">
+            <div class="task important inwork" id="3">
                 Задача1
             </div>
         </div>
