--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,9 +8,12 @@
 <body>
 <script src="{{url_for('static', filename='script/main.js')}}"></script>
     <div id="wrapper">
-        <div id="queue">
+        <div id="queue-tasks">
             <div class="task critical inwork" id="1">
                 Задача3
+            </div>
+            <div class="task important inwork" id="4">
+                Задача 4
             </div>
             <div class="task usual inwork" id="2">
                 Задача2
