--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,10 +8,48 @@
 <body>
 
     <div id="wrapper">
-        <div id="queue-tasks">
+        <div id="todo">
+            <div id="top-panel">
+                <div id="icon-create-task">
+                    <img class="icon_create" data-action="create" src="{{ url_for('static', filename='images/create_green.png') }}" >
+                </div>
+                <div id="search-panel">
+                    <input id="search-bar" type="text" />
+                </div>
+            </div>
+            <div id="queue-tasks">
 
+            </div>
         </div>
-        <div id="description">
+
+        <div class="modal-window" id="task-modal">
+            <div>
+                <p class="modal-label"> Создание задачи </p>
+                <div class="task-subject">
+                    <label for="subject-input">Название</label>
+                    <input type="text" class="task-subject-input" id="subject-input">
+                </div>
+                <div class="task-description">
+                    <label for="description">Описание</label>
+                    <textarea id="description" class="text-description" cols="40" rows="1"></textarea>
+                </div>
+                <div class="task-priority">
+                    <label for="priority">Приоритет</label>
+                    <select id="priority">
+                        <option value="Usual" selected>Обычная</option>
+                        <option value="Important">Важная</option>
+                        <option value="Critical">Критичная</option>
+                    </select>
+                </div>
+                <div class="panel-control" >
+                    <div class="but ok" id="modal-ok">
+                        Применить
+                    </div>
+                    <div class="but cancel" id="modal-cancel">
+                        Отменить
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 <script src="{{url_for('static', filename='script/main.js')}}"></script>
