Закончен основной функционал

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,9 +35,9 @@
                 <div class="task-priority">
                     <label for="priority">Приоритет</label>
                     <select id="priority">
-                        <option value="Usual" selected>Обычная</option>
-                        <option value="Important">Важная</option>
-                        <option value="Critical">Критичная</option>
+                        <option value="usual" selected>Обычная</option>
+                        <option value="important">Важная</option>
+                        <option value="critical">Критичная</option>
                     </select>
                 </div>
                 <div class="panel-control" >
